--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -16,8 +16,6 @@ authorityDelete=Berechtigung l\u00F6schen
 authoritiesProject=Projektberechtigungen
 authoritiesClient=Mandantberechtigungen
 authoritiesGlobal=Globale Berechtigungen
-Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Bandweise Endkontrolle und Freigabe aller Metadaten)
-Bestandsaufnahme\ der\ gedruckten\ Version=Bestandsaufnahme der gedruckten Version
 DMSExportByThread=Der Vorgang wird vom Taskmanager ins DMS exportiert\:
 DMSExportThreadCreated=Der DMS-Export f\u00FCr den Vorgang wurde im Taskmanager vorbereitet\:
 EmptyTask=Beispiel f\u00FCr eine lang laufende Aufgabe
@@ -28,7 +26,6 @@ NOT=Enth\u00E4lt nicht
 NoCataloguePluginForCatalogue=Keines der verf\u00fcgbaren OPAC-Plugins unterst\u00fctzt diesen Katalog.
 aLazyInitializationErrorOcurred=Ein Fehler mit der Datenbankverbindung trat auf. Eventuell wurde dieser Fehler durch Verwenden des Zur\u00FCck Buttons verursacht. Sie m\u00FCssen Kitodo vermutlich neu \u00FCber den Link/URL starten
 abDerErstenMarkiertenSeite=Ab der ersten markierten Seite
-abgeschlosseneTasksAusListeEntfernen=Abgeschlossene Aufgaben l\u00F6schen
 active=Aktiv
 activeUsers=Aktive Benutzer
 addDemoTask=Beispielaufgabe hinzuf\u00FCgen
@@ -48,18 +45,13 @@ administration=Administration
 administrativ=administrativ
 editType=Art der Aktualisierung
 allPages=Alle Seiten
-alleTasksAusListeEntfernen=Alle Aufgaben l\u00F6schen
-alleTrefferDieserSeiteInMeinHomeverzeichnis=Alle Treffer dieser Seite in mein Homeverzeichnis laden
-allgemeines=Allgemeines
 allMyTasks=alle meine Aufgaben
 allProcesses=Alle Vorg\u00E4nge
 allProjects=Alle Projekte
 allTasks=Alle Aufgaben
+alreadyLoggedIn=Sie sind bereits eingeloggt. Wie m\u00F6chten Sie vorgehen?
 alsErstesKindDesAktuellenElements=Als erstes Subelement des aktuellen Elementes
 alsLetztesKindDesAktuellenElements=Als letztes Subelement des aktuellen Elementes
-anzahlDerArtikelUndImages=Anzahl der Artikel und Images
-anzahlDerImagesAllerTreffer=Anzahl der Images aller Treffer
-anzahlMetadatenUndImagesErmitteln=Anzahl der Metadaten und Images ermitteln
 apply=\u00DCbernehmen
 applyToAllProcesses=\u00DCbernehmen f\u00FCr alle Vorg\u00E4nge dieses Batches
 applyToThisProcess=\u00DCbernehmen f\u00FCr diesen Vorgang
@@ -67,9 +59,6 @@ arabic=arabisch
 assigned=Zugewiesen
 ats=ATS
 ausGruppeLoeschen=Benutzer aus der Benutzergruppe l\u00F6schen
-ausHomeverzeichnisEntfernen=Verlinkung aus Homeverzeichnis entfernen
-ausProjektLoeschen=Benutzer aus dem Projekt l\u00F6schen
-ausgelagerung=Auslagerung
 ausgewaehltesStrukturelement=Ausgew\u00E4hltes Strukturelement
 actions=Aktionen
 automatic=automatisch
@@ -78,6 +67,7 @@ automaticTask=Automatische Aufgabe
 author=Autor
 available=Verf\u00fcgbar
 back=Zur\u00FCck
+backToTask=Zur\u00FCck zu Aufgabe
 batch=Batch
 # batch_type are used in getTypeTranslated of BatchService
 batch_type_logistic=Logistik
@@ -93,11 +83,7 @@ bearbeitungDiesesSchrittesWirklichAbgeben=M\u00F6chten Sie die Bearbeitung diese
 bearbeitungDiesesSchrittsUebernehmen=Die Bearbeitung dieser Aufgabe \u00FCbernehmen
 bearbeitungsstatusHochsetzen=Bearbeitungsstatus hochsetzen
 bearbeitungsstatusRuntersetzen=Bearbeitungsstatus runtersetzen
-bedienungshinweise=Bedienungshinweise
-bedienungshinweiseText=Lorem deutsch ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 beimAbschliessenVerifizieren=Beim Abschlie\u00DFen verifizieren
-bemerkung=Bemerkung
-bildVerlinken=Bild verlinken
 selectPlease=Bitte ausw\u00E4hlen
 blattzaehlung=Blattz\u00E4hlung
 blattzaehlungrectoverso=Blattz\u00E4hlung recto-verso
@@ -227,7 +213,11 @@ createNewspaperProcessesTask=Anlegen von Zeitungsvorg\u00E4ngen
 createNewspaperProcessesTask.MetadataNotAllowedException=Der Vorgang {0} kann nicht angelegt werden, da einem Strukturyp ein Metadatum nicht zugewiesen werden kann
 createNewBatchFromSelectedProcesses=Neuen Batch aus den gew\u00E4hlten Vorg\u00E4ngen erzeugen
 createNewDocket=Neuen Laufzettel anlegen
+createNewLdapGroup=Neue LDAP-Gruppe anlegen
+createNewProcess=Einen neuen Vorgang anlegen
 createNewProcessFromTemplate=Einen neuen Vorgang auf Basis der Produktionsvorlage anlegen
+createNewRuleset=Neuen Regelsatz anlegen
+createNewUserGroup=Neue Benutzergruppe anlegen
 createNewWorkflow=Neuen Workflow anlegen
 createPdf=PDF erzeugen
 createXML=Export des Logfiles in das Home Verzeichnis
@@ -241,9 +231,9 @@ file=Datei
 dashboard=Dashboard
 dataPrivacy=Datenschutz
 databaseStatistic=Datenbankstatistik
-dateiMitTiffHeaderSpeichern=Datei mit Tiff-Header speichern
 day=Tag
 days=Tage
+defaults=Vorgaben
 delete=L\u00F6schen
 deleteAfterMove=Nach dem Export l\u00F6schen
 deleteBatch=Den ausgew\u00E4hlten Batch l\u00F6schen
@@ -261,12 +251,12 @@ directory=Verzeichnis
 directoryRemoved=Verzeichnis aus Benutzerhome entfernt
 directoryRemovedAll=Alle Verzeichnisse aus Benutzerhome entfernt
 displayRules=Anzeigeregeln f\u00FCr Metadaten
-dmsExportformat=DMS Exportformat
+dmsExportFormat=DMS Exportformat
 dmsImportCreateProcessFolder=Erzeuge Vorgangsordner
-dmsImportErrorPfad=DMS-Export-Error-Ordner
-dmsImportImagesPfad=DMS-Export-Images-Ordner
-dmsImportPfadXmlDatei=DMS-Export-Ordner f\u00FCr XML-Datei
-dmsImportSuccessPfad=DMS-Export-Success-Ordner
+dmsImportErrorPath=DMS-Export-Error-Ordner
+dmsImportImagesPath=DMS-Export-Images-Ordner
+dmsImportPathXmlFile=DMS-Export-Ordner f\u00FCr XML-Datei
+dmsImportSuccessPath=DMS-Export-Success-Ordner
 docket=Laufzettel
 docketInUse=Der Laufzettel ist noch mit Prozessen verkn\u00FCpft und kann nicht gel\u00F6scht werden.
 docketMissing=Die Konfigurationsdatei zur Laufzettelgenerierung existiert nicht
@@ -313,8 +303,6 @@ editTemplate=Produktionsvorlage bearbeiten
 editWorkflow=Workflow bearbeiten
 editor=Editor
 createProcessFromTemplate=Einen Vorgang auf Basis dieser Produktionsvorlage anlegen
-eineNeueProzessvorlageAnlegen=Eine neue Produktionsvorlage anlegen
-einenNeuenProzessAnlegen=Einen neuen Vorgang anlegen
 elasticSearchNotRunning=Der Elasticsearch Server ist nicht erreichbar.
 endDate=Enddatum
 errorEmailBody=Es ist ein Fehler in Kitodo aufgetreten. Erg\u00E4nzen Sie bitte hier die Meldung durch eine kurze Beschreibung, was Sie gerade in Kitodo getan haben, als dieser Fehler auftrat\:
@@ -355,6 +343,7 @@ errorUploading=Fehler beim Hochladen von ''{0}''
 erscheinungsjahr=Erscheinungsjahr
 erscheinungsort=Erscheinungsort
 erstellungsdatum=Erstellungsdatum
+executeKitodoScript=KitodoScript ausf\u00FChren
 exportBatch=Gesamten Batch ins DMS exportieren
 exportDMS=Export DMS
 exportDmsTask=Vorgang exportieren
@@ -379,8 +368,6 @@ fileGroupDelete=Dateigruppe l\u00F6schen
 filename=Dateiname
 files=Dateien
 filter=Filter
-filterAnpassen=Filter anpassen
-filterAnwenden=Filter anwenden
 finished=Beendet
 firstPage=Erste Seite
 folderImport=Import aus Verzeichnis
@@ -396,12 +383,9 @@ from=von
 gallery=Galerie
 generate=Generieren
 generatePNGs=PNGs generieren
-gesamtesTrefferset=Gesamtes Trefferset
-gesamtesTreffersetInMeinHomeverzeichnis=Gesamtes Trefferset in mein Homeverzeichnis laden
 getNormDataRecord=laden
 # getNormDataRecordFailed is used in alert in metadata.js - line 44
 getNormDataRecordFailed=Ein Fehler ist aufgetreten\:
-kitodoScriptAusfuehren=KitodoScript ausf\u00FChren
 granularity.apply=anwenden
 granularity.batches.label=Um die Logistik des Aushebens, des Transports und der Verarbeitung optimal gestalten zu k\u00f6nnen, k\u00f6nnen Sie die erzeugten Vorg\u00e4nge automatisch zu Batches zusammenfassen lassen. W\u00e4hlen Sie eine Granularit\u00e4tsstufe aus, welche im Workflow gut handhabbare Segmente erzeugt, um diese Funktion zu nutzen:
 granularity.batches.notAvailable=Diese Funktion ist nur mit feineren Stufen verf\u00fcgbar.
@@ -466,7 +450,7 @@ importDms=Export in das DMS
 importFailedError=Der Import von {0} ist fehlgeschlagen. Die Fehlermeldung lautet\: {1}.
 importFiles=Dateien importieren
 importMittelsFileUpload=Import mittels Dateiupload
-importplugin=Plugin f\u00FCr den Import
+importPlugin=Plugin f\u00FCr den Import
 imprint=Impressum
 inBearbeitungDurch=In Bearbeitung durch
 indexedEntries=Indexierte Eintr\u00E4ge
@@ -505,6 +489,7 @@ ldapServerSaving=LDAP-Server wird gespeichert...
 newLdapServer=Neuer LDAP-Server
 ldaplogin=LDAP login
 link=Verkn\u00FCpfung
+linkImage=Bild verlinken
 loadAllProcesses=Alle Vorg\u00E4nge laden
 loadAssociatedBatchOfProcess=Die enthaltenden Batches der gew\u00E4hlten Vorg\u00E4nge ausw\u00E4hlen
 loadProcessesOfBatch=Vorg\u00E4nge des/der ausgew\u00E4hlten Batches laden
@@ -566,14 +551,13 @@ metadataView=Metadaten betrachten
 metadataSaving=Metadaten werden gespeichert
 metadataShowImage=Bild anzeigen
 metadataSortByRuleset=Sortierung der Metadaten wie im Regelsatz (sonst alphabetisch)
-metadatenBearbeiten=Metadaten bearbeiten
 metsContentIDs=METS ContentIDs (physische Struktur)
 metsDigiprovPresentation=METS Digiprov Pr\u00E4sentation
 metsDigiprovPresentationAnchor=METS Digiprov Pr\u00E4sentation (Anker)
 metsDigiprovReference=METS Digiprov Referenz
 metsDigiprovReferenceAnchor=METS Digiprov Referenz (Anker)
 metsEditorFileUploadSuccessful=Der Dateiimport war erfolgreich.
-metsParamater=Mets Parameter
+metsParameter=Mets Parameter
 metsPointerPath=METS Pointer Pfad
 metsPointerPathAnchor=METS Pointer Pfad (Anker)
 metsPurl=METS PURL (logische Struktur)
@@ -589,19 +573,12 @@ modules=Module
 possibleActions=M\u00F6gliche Aktionen
 month=Monat
 months=Monate
-multiTiffDownloaden=Multipage-Tiff downloaden
 multipleBatchesAssigned=Dieser Vorgang ist mehreren Batches zugeordnet. Um diese Funktion zu nutzen, darf der Vorgang nur genau einem Batch zugeordnet sein.
 neu=Neuen Datensatz anlegen
-neueBenutzergruppeAnlegen=Neue Benutzergruppe anlegen
-neueLdapgruppeAnlegen=Neue LDAP-Gruppe anlegen
 neueMetadatenHinzufuegen=Neue Metadaten hinzuf\u00FCgen
 neuePersonAnlegen=Neue Person anlegen
 neuePersonHinzufuegen=Neue Person hinzuf\u00FCgen
-neuenRegelsatzAnlegen=Neuen Regelsatz anlegen
-neuenVorgangAnlegen=Neuen Vorgang anlegen
-neuesMetadatumAnlegen=Neue Metadaten anlegen
 newPassword=Neues Passwort
-neuesProjektAnlegen=Neues Projekt anlegen
 neuesStrukturelement=Neues Strukturelement
 new=Startbereit
 newProcess.catalogueSearch.failed=Das Plug-in konnte den Treffer nicht importieren:
@@ -665,9 +642,9 @@ passwordChange=Passwort \u00E4ndern
 passwordChanged=Das Passwort wurde erfolgreich ge\u00E4ndert.
 personBearbeiten=Person bearbeiten
 person=Person
-personen=Personen
-personendatenKopieren=Personendaten kopieren
-personendatenLoeschen=Personendaten l\u00F6schen
+persons=Personen
+personsDataCopy=Personendaten kopieren
+personsDataDelete=Personendaten l\u00F6schen
 pleaseSignIn=Bitte melden Sie sich an
 plugins=Plugins
 position=Position
@@ -714,9 +691,6 @@ propertyAdd=Eigenschaft hinzuf\u00FCgen
 propertyEdit=Eigenschaft bearbeiten
 propertyNotSaved=Eigenschaft konnte nicht gespeichert werden.
 propertySaved=Eigenschaft wurde gespeichert.
-prozessvorlage=Produktionsvorlage
-templateNotAvailableForProcess=Diese Vorgangsvorlage enth\u00E4lt Schritte mit unvollst\u00E4ndigen Angaben oder ist nicht aktiv.
-templates=Produktionsvorlagen
 quarter=Quartal
 quarters=Quartale
 queryOPAC=OPAC abfragen
@@ -724,6 +698,7 @@ ready=Fertig
 recordImport=Datensatz-Import
 records=Datens\u00E4tze
 reload=Aktualisieren
+remark=Bemerkung
 removeFilter=Filter entfernen
 removeFromAssociatedBatch=Selektierte Vorg\u00E4nge von ihren zugewiesenen Batches entfernen
 removeFromBatch=Die Zuordnungs des Vorgangs zu Batch {0} wurde aufgehoben.
@@ -744,6 +719,7 @@ rulesetNotFound=Die angegebene Regelsatzdatei konnte nicht gefunden werden.
 rulesetSaving=Regelsatz wird gespeichert...
 rulesets=Regels\u00E4tze
 saveConfiguration=Konfigurationsdatei speichern
+saveTifHeaderFile=Datei mit Tiff-Header speichern
 script=Skript
 scriptExecute=Skript ausf\u00FChren
 scriptName=Skriptname
@@ -773,7 +749,6 @@ showInactiveProjects=Deaktivierte Projekte zeigen
 showAutomaticTasks=Automatische Aufgaben anzeigen
 showClosedProcesses=Abgeschlossene Vorg\u00E4nge zeigen
 showDataForProcess=Zeige Daten des Vorgangs
-sieSindBereitsEingeloggt=Sie sind bereits eingeloggt. Wie m\u00F6chten Sie vorgehen?
 signIn=Anmelden
 # sollDerContentWirklichGeloeschtWerden is used in onclick
 sollDerContentWirklichGeloeschtWerden=Soll der Inhalt wirklich gel\u00F6scht werden?
@@ -818,12 +793,15 @@ taskManager=Taskmanager
 taskSaving=Aufgabe wird gespeichert...
 tasks=Aufgaben
 tasksCurrent=Meine Aufgaben
-technischeDaten=Technische Daten
+technicalData=Technische Daten
+template=Produktionsvorlage
 templateAssignedError=Der Workflow kann nicht gel\u00F6scht werden, da diesem Produktionsvorlagen zugewiesen sind.
 templateDetails=Produktionsvorlagendetails
+templateNotAvailableForProcess=Diese Vorgangsvorlage enth\u00E4lt Schritte mit unvollst\u00E4ndigen Angaben oder ist nicht aktiv.
 templateProperty=Vorlageneigenschaft
 templateProperties=Vorlageneigenschaften
 templateTitle=Produktionsvorlagentitel
+templates=Produktionsvorlagen
 termsOfUse=Nutzungsbedingungen
 tifHeaderDocumentName=Tif-Header Documentname
 tifHeaderImageDescription=Tif-Header Image-Beschreibung
@@ -837,7 +815,6 @@ titleEmpty=Vorgangstitel ist nicht ausgef\u00FCllt.
 to=bis
 tooManyBatchesSelected=Es sind mehrere Batches ausgew\u00E4hlt. W\u00E4hlen Sie genau einen Batch aus, um diese Funktion zu nutzen.
 hits=Treffer
-trefferDieserSeite=Treffer dieser Seite
 tsl=TSL
 typ=Typ
 type=Art
@@ -874,8 +851,10 @@ userGroups=Benutzergruppen
 userGroupsAdd=Benutzergruppen hinzuf\u00FCgen
 userConfiguration=Benutzerkonfiguration
 userCreate=Neuen Benutzer anlegen
-userManagement=Benutzerverwaltung
+userInstruction=Bedienungshinweise
+userInstructionText=Lorem deutsch ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 userList=Benutzerliste
+userManagement=Benutzerverwaltung
 userView=Benutzer anzeigen
 userAssignedError=Das Projekt kann nicht gel\u00F6scht werden, da diesem noch Benutzer zugewiesen sind.
 userData=Benutzerdaten \u0026 Einstellungen
@@ -890,21 +869,15 @@ validatingData=Daten werden validiert...
 validate=Validieren
 value=Wert
 verlinkungDesBildesMitStrukturelement=Verlinkung des Bildes mit dem gew\u00E4hlten Strukturelement
-verschiebenAbbrechen=Verschieben abbrechen
-verzeichnisFertigAusHomeverzeichnisEntfernen=Verzeichnis "fertig" aus Homeverzeichnis entfernen
-verzeichnisFertigHochladen=Verzeichnis "fertig" aus dem Homeverzeichnis hochladen
 volume=Band
 von=von
 vorDasAktuelleElement=Vor dem aktuellen Element
-defaults=Vorgaben
-vorgangsdatum=Vorgangsdatum
 vorlage=Physische Vorlage
 vorlagen=Physische Vorlagen
 firstName=Vorname
 week=Woche
 weeks=Wochen
 weiterZuArbeitsschritt=Senden an Arbeitsschritt
-werkstuecke=Werkst\u00FCcke
 wholeIndex=Gesamter Index
 wikiField=Wiki-Feld
 # wirklichAusfuehren is used many times in onclick
@@ -921,5 +894,4 @@ yes=Ja
 youWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 zeitschrift=Zeitschrift
 relatedPages=Zugeh\u00F6rige Seiten
-zurueckZuArbeitsschritt=Zur\u00FCck zu Aufgabe
 welcome=Willkommen
