--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -16,8 +16,6 @@ authorityDelete=Delete authority
 authoritiesProject=Project authorities
 authoritiesClient=Client authorities
 authoritiesGlobal=global authorities
-Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Final checking at volume level and release of all metadata
-Bestandsaufnahme\ der\ gedruckten\ Version=Inventory of printed version
 DMSExportByThread=The process is being exported into the DMS by the task manager\:
 DMSExportThreadCreated=The DMS export for the process has been prepared in the task manager\:
 EmptyTask=Example of a long-running task
@@ -28,7 +26,6 @@ NOT=does not contain
 NoCataloguePluginForCatalogue=None of the OPAC plugins available is capable of reading this catalogue.
 aLazyInitializationErrorOcurred=An error has occurred with the database connection. This error may have been caused by using the return button of your browser. You probably have to return to Kitodo via the link/url.
 abDerErstenMarkiertenSeite=From first selected page
-abgeschlosseneTasksAusListeEntfernen=Remove finished tasks
 active=Active
 activeUsers=Current users
 addDemoTask=Add sample task
@@ -48,18 +45,13 @@ administration=Administration
 administrativ=administrative
 editType=Update type
 allPages=All pages
-alleTasksAusListeEntfernen=Remove all tasks
-alleTrefferDieserSeiteInMeinHomeverzeichnis=Put all hits for this page in my home directory
-allgemeines=General
 allMyTasks=All my tasks
 allProcesses=All processes
 allProjects=All projects
 allTasks=All tasks
+alreadyLoggedIn=You are already logged in. How do you want to proceed?
 alsErstesKindDesAktuellenElements=As first child of current element
 alsLetztesKindDesAktuellenElements=As last child of current element
-anzahlDerArtikelUndImages=Number of articles and images
-anzahlDerImagesAllerTreffer=Number of images for all hits
-anzahlMetadatenUndImagesErmitteln=Calculate number of metadata and images
 apply=Apply
 applyToAllProcesses=Apply to all processes of the batch
 applyToThisProcess=Apply to this process
@@ -67,9 +59,6 @@ arabic=Arabic
 assigned=Assigned
 ats=ATS
 ausGruppeLoeschen=Delete user from group
-ausHomeverzeichnisEntfernen=Remove link from home directory
-ausProjektLoeschen=Remove user from project
-ausgelagerung=Swapping out
 ausgewaehltesStrukturelement=Selected docstruct
 actions=Actions
 automatic=automatic
@@ -78,6 +67,7 @@ automaticTask=Automatic task
 author=Author
 available=Available
 back=Back
+backToTask=Back to task
 batch=batch
 # batch_type are used in getTypeTranslated of BatchService
 batch_type_logistic=logistics
@@ -93,11 +83,7 @@ bearbeitungDiesesSchrittesWirklichAbgeben=Do you really want to release the edit
 bearbeitungDiesesSchrittsUebernehmen=Accept editing of this task
 bearbeitungsstatusHochsetzen=Set status of process up
 bearbeitungsstatusRuntersetzen=Set status of process down
-bedienungshinweise=User instructions
-bedienungshinweiseText=Lorem deutsch ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 beimAbschliessenVerifizieren=Validate on exit
-bemerkung=Remark
-bildVerlinken=Link image
 selectPlease=Please select
 blattzaehlung=Sheet counting
 blattzaehlungrectoverso=RectoVerso Pagination
@@ -226,7 +212,11 @@ createNewspaperProcessesTask=Creation of processes for a newspaper
 createNewspaperProcessesTask.MetadataNotAllowedException=The process {0} cannot be created because a metadata element cannot be assigned to a structural type
 createNewBatchFromSelectedProcesses=create new batch of the selected processes
 createNewDocket=Create new docket
+createNewLdapGroup=Create new LDAP group
+createNewProcess=Create new process
 createNewProcessFromTemplate=Create process from template
+createNewRuleset=Create new rule set
+createNewUserGroup=Create new user group
 createNewWorkflow=Create new workflow
 createPdf=create pdf
 createXML=Export logfile as XML file to home directory
@@ -240,9 +230,9 @@ file=File
 dashboard=Dashboard
 dataPrivacy=Data privacy
 databaseStatistic=Database statistics
-dateiMitTiffHeaderSpeichern=Save file with tiff header
 day=day
 days=days
+defaults=Defaults
 delete=Delete
 deleteAfterMove=Delete after export
 deleteBatch=delete the selected batch
@@ -260,12 +250,12 @@ directory=Folder
 directoryRemoved=Removed directory from home directory
 directoryRemovedAll=Removed all folder from home directory
 displayRules=Metadata display rules
-dmsExportformat=DMS export format
+dmsExportFormat=DMS export format
 dmsImportCreateProcessFolder=Create process folder
-dmsImportErrorPfad=DMS import error path
-dmsImportImagesPfad=DMS import images path
-dmsImportPfadXmlDatei=DMS import path for XML file
-dmsImportSuccessPfad=DMS import success path
+dmsImportErrorPath=DMS import error path
+dmsImportImagesPath=DMS import images path
+dmsImportPathXmlFile=DMS import path for XML file
+dmsImportSuccessPath=DMS import success path
 docket=Docket
 docketInUse=The docket is still associated with processes and could not be deleted.
 docketMissing=the configuration file for docket creation is missing
@@ -312,8 +302,6 @@ editTemplate=Edit template
 editWorkflow=Edit workflow
 editor=Editor
 createProcessFromTemplate=Create process from this process template
-eineNeueProzessvorlageAnlegen=Create new process template
-einenNeuenProzessAnlegen=Create new process
 elasticSearchNotRunning=The elastic search server is not running
 endDate=End date
 errorEmailBody=An error has occurred in Kitodo. Please add to this message a short description of what you were doing in Kitodo when the error occurred.
@@ -354,6 +342,7 @@ errorUploading=Error uploading ''{0}''
 erscheinungsjahr=Year of publication
 erscheinungsort=Place of publication
 erstellungsdatum=Date created
+executeKitodoScript=Execute KitodoScript
 exportBatch=Export batch to DMS
 exportDMS=Export DMS
 exportDmsTask=Export process
@@ -377,8 +366,6 @@ fileGroupDelete=Delete file group
 filename=File name
 files=Files
 filter=Filter
-filterAnpassen=Adjust filter
-filterAnwenden=Apply filter
 finished=Finished
 firstPage=First page
 folderImport=import from folder
@@ -394,12 +381,9 @@ from=from
 gallery=Gallery
 generate=Generate
 generatePNGs=Generate PNGs
-gesamtesTrefferset=All hits
-gesamtesTreffersetInMeinHomeverzeichnis=Put all hits in my home directory
 getNormDataRecord=load
 # getNormDataRecordFailed is used in alert in metadata.js - line 44
 getNormDataRecordFailed=An error occurred\:
-kitodoScriptAusfuehren=Execute KitodoScript
 granularity.apply=apply
 granularity.batches.label=In order to design the logistics of the excavation, transport and processing optimally, you can have the generated processes combined into batches automatically. To use this feature, select a level of granularity, which produces easy to handle segments in the workflow\:
 granularity.batches.noData=Please select the level for the processes first.
@@ -464,7 +448,7 @@ importFiles=Import files
 importMittelsFileUpload=Import by file upload
 importedBatchLabel=Imported from {0}, {1}
 importingData=Importing data...
-importplugin=import Plugin
+importPlugin=import Plugin
 imprint=Imprint
 inBearbeitungDurch=In edition by
 indexedEntries=Indexed entries
@@ -503,6 +487,7 @@ ldapServerView=View LDAP-server
 ldapServerSaving=Saving LDAP-Server...
 ldapServerNew=Add new LDAP server
 link=Link
+linkImage=Link image
 loadAllProcesses=Load all processes
 loadAssociatedBatchOfProcess=Highlight the batches containing the chosen processes
 loadProcessesOfBatch=load processes of the selected batch
@@ -564,14 +549,13 @@ metadataView=View metadata
 metadataSaving=Saving metadata
 metadataShowImage=Show image
 metadataSortByRuleset=Order metadata as in ruleset (otherwise alphabetically)
-metadatenBearbeiten=Edit metadata
 metsContentIDs=METS ContentIDs (physical structure)
 metsDigiprovPresentation=METS Digiprov Presentation
 metsDigiprovPresentationAnchor=METS Digiprov Presentation (Anchor)
 metsDigiprovReference=METS Digiprov Reference
 metsDigiprovReferenceAnchor=METS Digiprov Reference (Anchor)
 metsEditorFileUploadSuccessful=The file import was successful.
-metsParamater=Mets parameter
+metsParameter=Mets parameter
 metsPointerPath=METS Pointer Path
 metsPointerPathAnchor=METS Pointer Path Anchor
 metsPurl=METS PURL (logical structure)
@@ -587,19 +571,12 @@ modules=Modules
 possibleActions=Possible actions
 month=month
 months=months
-multiTiffDownloaden=Download multi-page tiff
 multipleBatchesAssigned=This process is assigned to multiple batches. To use this feature, it must be assigned to only one batch.
 neu=Create new record set
-neueBenutzergruppeAnlegen=Create new user group
-neueLdapgruppeAnlegen=Create new LDAP group
 neueMetadatenHinzufuegen=Add new metadata
 neuePersonAnlegen=Create new person
 neuePersonHinzufuegen=Add new person
-neuenRegelsatzAnlegen=Create new rule set
-neuenVorgangAnlegen=Create new process
-neuesMetadatumAnlegen=Create new metadata
 newPassword=New password
-neuesProjektAnlegen=Create new project
 neuesStrukturelement=New docstruct
 new=Ready
 newFileName=New file name
@@ -664,9 +641,9 @@ passwordChange=Change password
 passwordChanged=The password has been changed.
 person=Person
 personBearbeiten=Edit person
-personen=Persons
-personendatenKopieren=Copy person data
-personendatenLoeschen=Delete person data
+persons=Persons
+personsDataCopy=Copy person data
+personsDataDelete=Delete person data
 pleaseSignIn=Sign in
 plugins=Plugins
 position=Position
@@ -712,9 +689,6 @@ propertyAdd=Add property
 propertyEdit=Edit property
 propertyNotSaved=Property could not be saved.
 propertySaved=Property saved.
-prozessvorlage=Process template
-templateNotAvailableForProcess=This process template contains tasks with incomplete details or is inactive.
-templates=Process templates
 quarter=quarter
 quarters=quarters
 queryOPAC=Query OPAC
@@ -722,6 +696,7 @@ ready=Ready
 recordImport=record import
 records=records
 reload=reload
+remark=Remark
 removeFilter=Remove filter from list
 removeFromAssociatedBatch=remove selected processes from assigned batches
 removeFromBatch=Removed process from batch {0}.
@@ -742,6 +717,7 @@ rulesetNotFound=The specified ruleset could not be found.
 rulesetSaving=Saving ruleset...
 rulesets=Rule sets
 saveConfiguration=Save configuration file
+saveTifHeaderFile=Save file with tiff header
 script=Script
 scriptExecute=Execute script
 scriptName=Script name
@@ -771,7 +747,6 @@ showInactiveProjects=show deactivated projects
 showAutomaticTasks=show automatic tasks
 showClosedProcesses=Show closed processes
 showDataForProcess=show process data
-sieSindBereitsEingeloggt=You are already logged in. How do you want to proceed?
 signIn=Sign in
 # sollDerContentWirklichGeloeschtWerden is used in onclick
 sollDerContentWirklichGeloeschtWerden=Do you really want to delete the content?
@@ -816,11 +791,14 @@ taskManager=Task manager
 taskSaving=Saving task...
 tasks=Tasks
 tasksCurrent=My tasks
-technischeDaten=Technical data
+technicalData=Technical data
+template=Process template
 templateAssignedError=The workflow could not be deleted because there are already assigned templates.
 templateDetails=Template details
+templateNotAvailableForProcess=This process template contains tasks with incomplete details or is inactive.
 templateProperty=template property
 templateProperties=Template properties
+templates=Process templates
 templateTitle=Template title
 termsOfUse=Terms of use
 tifHeaderDocumentName=Tiff header document name
@@ -835,7 +813,6 @@ titleEmpty=Process title is empty.
 to=to
 tooManyBatchesSelected=Multiple batches are selected. To use this function, please select one batch only.
 hits=Hits
-trefferDieserSeite=Hits of this page
 tsl=TSL
 typ=Type
 type=Type
@@ -872,6 +849,9 @@ userGroups=User groups
 userGroupsAdd=Add user groups
 userConfiguration=User configuration
 userCreate=Create new user
+userInstruction=User instructions
+userInstructionText=Lorem deutsch ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+userList=User list
 userManagement=User management
 userAssignedError=The project could not be deleted because there are still assigned users.
 userData=User data \u0026 settings
@@ -880,7 +860,6 @@ userView=View user
 userGroupAssignedError=The user group could not be deleted because there are still assigned steps.
 # userGroupSaving is used in usergroupEdit.xhtml - line 40
 userGroupSaving=Saving user group
-userList=User list
 userNotFound=User not found
 # userSaving is used in userEdit.xhtml - line 39
 userSaving=Saving user...
@@ -888,21 +867,15 @@ validatingData=Validating data...
 validate=Validate
 value=Value
 verlinkungDesBildesMitStrukturelement=Link the image with the selected structure element
-verschiebenAbbrechen=Cancel move
-verzeichnisFertigAusHomeverzeichnisEntfernen=Remove all links from directory 'fertig' in my home directory
-verzeichnisFertigHochladen=Upload 'fertig' directory from home directory
 volume=volume
 von=of
 vorDasAktuelleElement=Before current element
-defaults=Defaults
-vorgangsdatum=Process date
 vorlage=Physical template
 vorlagen=Physical templates
 firstName=First name
 week=week
 weeks=weeks
 weiterZuArbeitsschritt=Send to task
-werkstuecke=Workpieces
 wholeIndex=Whole index
 wikiField=Wiki field
 # wirklichAusfuehren is used many times in onclick
@@ -919,5 +892,4 @@ yes=yes
 youWillBeRedirected=You will be redirected after successful save.
 zeitschrift=Periodical
 relatedPages=Related pages
-zurueckZuArbeitsschritt=Back to task
 welcome=Welcome
